[gd_scene load_steps=2 format=3 uid="uid://bkkf60aapjatx"]

[ext_resource type="Script" uid="uid://bgek1qknybw0w" path="res://Scripts/Menu_Buttons/main_menu_buttons.gd" id="1_06t4h"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 394.0
offset_top = 7.0
offset_right = 486.0
offset_bottom = 30.0
text = "Neuro Fight"

[node name="Player1Options" type="VBoxContainer" parent="."]
offset_left = 56.0
offset_top = 45.0
offset_right = 263.0
offset_bottom = 157.0

[node name="P1Label" type="Label" parent="Player1Options"]
layout_mode = 2
text = "Player 1 (Ryu) Control:"

[node name="P1ControlSelector" type="OptionButton" parent="Player1Options"]
layout_mode = 2

[node name="Player2Options" type="VBoxContainer" parent="."]
offset_left = 597.0
offset_top = 43.0
offset_right = 834.0
offset_bottom = 124.0

[node name="P2Label" type="Label" parent="Player2Options"]
layout_mode = 2
text = "Player 2 (Dummy Ryu) Control:"

[node name="P2ControlSelector" type="OptionButton" parent="Player2Options"]
layout_mode = 2

[node name="StartButton" type="Button" parent="."]
offset_left = 387.0
offset_top = 128.0
offset_right = 483.0
offset_bottom = 159.0
text = "Start Game"

[node name="ErrorLabel" type="Label" parent="."]
offset_left = 408.0
offset_top = 261.0
offset_right = 448.0
offset_bottom = 284.0
